<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bck_color"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:contentDescription="@string/txt_desc_logo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/olympus" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textAlignment="center"
        android:textColor="@color/txt_title"
        android:textColorLink="@android:color/holo_red_light"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo">

        <TextView
            android:id="@+id/btnHome"
            android:layout_width="102dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/btn_home_layout"
            android:backgroundTint="@android:color/holo_orange_light"
            android:fontFamily="@font/lucida_sans_unicode"
            android:gravity="center"
            android:text="@string/btn_home"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="99dp" />

        <TextView
            android:id="@+id/btnResumo"
            android:layout_width="102dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/btn_home_layout"
            android:backgroundTint="@android:color/holo_orange_light"
            android:fontFamily="@font/lucida_sans_unicode"
            android:gravity="center"
            android:text="@string/btn_resumo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="99dp" />

        <TextView
            android:id="@+id/btnAlly"
            android:layout_width="102dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/btn_home_layout"
            android:backgroundTint="@android:color/holo_orange_light"
            android:fontFamily="@font/lucida_sans_unicode"
            android:gravity="center"
            android:text="@string/btn_a11y"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="99dp" />

        <TextView
            android:id="@+id/btnZap"
            android:layout_width="102dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/btn_home_layout"
            android:backgroundTint="@android:color/holo_orange_light"
            android:fontFamily="@font/lucida_sans_unicode"
            android:gravity="center"
            android:text="@string/btn_zap"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="99dp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flFragmentos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>